# ComputerVision_Ridge-Lane-Detection

./: .gitignore  README.md
src_c++/: .settings  CMakeLists.txt  run.sh
src_c++/etc/: camera_props.conf  common_props.conf
src_c++/include/: cuda_lane_detection.hpp  filter_mechanism.hpp  include.hpp  lane_detection.hpp
src_c++/include/common/: normalize.hpp  shadow_removal.hpp  smooth.hpp  view.hpp
src_c++/include/kernel/: anisotropic_gaussian.h  dominant_vector.h
src_c++/include/platform/: camera.hpp  config.hpp  gpu.hpp
src_c++/include/util/: io.hpp  log.hpp  util.hpp
src_c++/src/: cuda_lane_detection.cpp  filter_mechanism.cpp  lane_detection.cpp  main.cpp
src_c++/src/common/: normalize.cpp  shadow_removal.cpp  smooth.cpp  view.cpp
src_c++/src/kernel/: anisotropic_gaussian.cu  dominant_vector.cu
src_c++/src/platform/: camera.cpp  config.cpp  gpu.cpp
src_c++/src/util/: io.cpp  log.cpp  util.cpp
src_python/: main.py  remove_shadow.py  ridge_lane_detection_chinhnt24.py  ridgeness_detection.py  run_remove_shadow.py
src_python/common/: __init__.py  img_hough_line.py  img_illu_invar.py  img_smooth.py
src_python/unittest/: lane_marker_draw_lib.py  lane_marker_unit_test.py  summary.md
src_python/unittest/TC01/: TC01.md
src_python/unittest/TC02/: TC02.md
src_python/unittest/TC03/: TC03.md
src_python/unittest/TC04/: TC04.md
src_python/unittest/TC05/: TC05.md
src_python/unittest/TC06/: TC06.md
src_python/unittest/TC07/: TC07.md
src_python/unittest/TC08/: TC08.md
src_python/unittest/TC09/: TC09.md
src_python/unittest/TC10/: TC10.md
src_python/unittest/TC11/: TC11.md
src_python/unittest/TC12/: TC12.md
src_python/unittest/TC13/: TC13.md
src_python/unittest/TC14/: TC14.md
src_python/unittest/TC15/: TC15.md
src_python/unittest/TC16/: TC16.md
src_python/unittest/TC17/: TC17.md
src_python/unittest/TC18/: TC18.md
src_python/unittest/TC19/: TC19.md
src_python/unittest/TC20/: TC20.md
src_python/unittest/TC21/: TC21.md
src_python/unittest/TC22/: TC22.md
src_python/unittest/TC23/: TC23.md
src_python/unittest/TC24/: TC24.md
src_python/unittest/TC25/: TC25.md
src_python/unittest/TC26/: TC26.md
src_python/unittest/TC27/: TC27.md
src_python/unittest/TC28/: TC28.md
src_python/unittest/TC29/: TC29.md
src_python/unittest/TC30/: TC30.md
src_python/unittest/TC31/: TC31.md
src_python/utils/: __init__.py  vap_io_lib.py  vap_time_lib.py
tools/: .gitignore
tools/get_camera_params/: CMakeLists.txt  get_camera_params.cpp  run.sh
tools/video_cut/: run.sh  video_cut.py
(+53 files in other folders)
